--- a/01 Hola Mundo/index.html
+++ b/01 Hola Mundo/index.html
@@ -8,3 +8,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
+git config --global user.name "danyHernandezVVH"
+git config --global user.email danyhernandez@comeduc.cl
+
